loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-node
  name: hello-node-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-node
  type: LoadBalancer
